# duckdbcs

./: .gitignore  README.md  main.py  pyproject.toml  reference.md
examples/: basic_client.py  basic_server.py  dynamic_attach.py
src/duckdbcs/: __init__.py  __main__.py  cli.py  client.py  config.py  server.py
tests/: __init__.py  test_client.py  test_config.py  test_server.py
